navbar ? mobile not showing correctly

--- a/src/index.css
+++ b/src/index.css
@@ -11,9 +11,8 @@ body,
 app,
 html,
 #root,
-.app {
+.app{
     height: 100%;
-
-    background-color: #010026;
+    background-color: #5E477F;
     @apply text-white;
 }
